--- a/style.css
+++ b/style.css
@@ -1,27 +1,43 @@
 .form-container {
     margin-bottom: 20px;
 }
+
 .info {
     color: green;
 }
+
 .error {
     color: red;
 }
+
 .dismiss-btn {
     background-color: red;
     color: white;
 }
+
 .submit-btn {
     background-color: green;
     color: white;
 }
+
 textarea {
     width: 100%;
     height: 100px;
 }
+
 .call-type-btn {
     margin-left: 10px;
 }
+
 .hidden {
     display: none;
+}
+
+.info-item {
+    color: green;
+}
+
+#infoContainer {
+    min-height: 100px;
+    border: 1px solid black;
 }
