--- a/style.css
+++ b/style.css
@@ -36,3 +36,11 @@ textarea {
 .info-item {
     color: green;
 }
+
+/* Add this to your CSS file */
+.callForm input[type="text"], 
+.callForm input[type="email"],
+.callForm textarea {
+    display: block;
+    margin-bottom: 10px; /* Add some space between fields */
+}
