--- a/style.css
+++ b/style.css
@@ -44,3 +44,15 @@ textarea {
     display: block;
     margin-bottom: 10px; /* Add some space between fields */
 }
+
+/* Add this to your CSS file */
+.callForm div {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.callForm div input,
+.callForm div textarea {
+    margin-right: 10px;
+}
