--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .form-container {
     margin-bottom: 5px;
-    border: 2px solid #000; /* Add this line */
+    border: 3px solid black; /* Adds a border around the form */
+    padding: 10px; /* Adds some space inside the form container */
 }
 
 .info {
@@ -19,7 +20,6 @@
 .submit-btn {
     background-color: green;
     color: white;
-    padding-left: 5px; /* Add 5px space to the left of the submit button */
 }
 
 textarea {
@@ -66,7 +66,13 @@ textarea {
 }
 
 /* New CSS */
+.callForm .submit-btn,
+.callForm .dismiss-btn {
+    margin-left: 5px; /* Add 5px space to the left of each button in .callForm */
+}
+
 #formsContainer {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
 }
