--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .form-container {
     margin-bottom: 5px;
-    border: 3px solid black; /* Adds a border around the form */
+    border: 2px solid black; /* Adds a border around the form */
     padding: 10px; /* Adds some space inside the form container */
 }
 
@@ -53,22 +53,17 @@ textarea {
 }
 
 /* Updated CSS */
-.callForm div {
+.callForm > div, /* Selects all divs that are direct children of .callForm */
+.callForm > button /* Selects all buttons that are direct children of .callForm */ {
     display: flex;
     align-items: center;
     margin-bottom: 5px;
-    padding-left: 5px; /* Add 5px space to the left of each div in .callForm */
+    padding-left: 5px; /* Add 5px space to the left of each div and button in .callForm */
 }
 
 .callForm div input,
 .callForm div textarea {
     margin-right: 10px;
-}
-
-/* New CSS */
-.callForm .submit-btn,
-.callForm .dismiss-btn {
-    margin-left: 5px; /* Add 5px space to the left of each button in .callForm */
 }
 
 #formsContainer {
