--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ textarea {
 .callForm > button /* Selects all buttons that are direct children of .callForm */ {
     display: flex;
     align-items: center;
+    flex-direction: column; /* New property to align items vertically */
     margin-bottom: 5px;
     padding-left: 5px; /* Add 5px space to the left of each div and button in .callForm */
 }
@@ -75,6 +76,8 @@ textarea {
     padding: 5px; /* Adds some space inside the output div */
     background-color: #f0f0f0; /* Sets a light grey background color */
 }
+
+
 
 .output-data {
     /* Add any specific styles for the results text here */
