--- a/style.css
+++ b/style.css
@@ -56,8 +56,8 @@ textarea {
 .callForm > div, /* Selects all divs that are direct children of .callForm */
 .callForm > button /* Selects all buttons that are direct children of .callForm */ {
     display: flex;
+    flex-direction: row; /* Change from column to row */
     align-items: center;
-    flex-direction: column; /* New property to align items vertically */
     margin-bottom: 5px;
     padding-left: 5px; /* Add 5px space to the left of each div and button in .callForm */
 }
