--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin-bottom: 5px;
     border: 1px solid black; /* Adds a border around the form */
     padding: 5px; /* Adds some space inside the form container */
+    width: 100%; /* New property to stretch the container to full width */
     box-sizing: border-box; /* New property to include padding and border in the container's total width */
     align-items: flex-start; /* New property to align items to the start of the container */
 }
