--- a/style.css
+++ b/style.css
@@ -4,9 +4,7 @@
     padding: 5px; /* Adds some space inside the form container */
     width: 100%; /* New property to stretch the container to full width */
     box-sizing: border-box; /* New property to include padding and border in the container's total width */
-    align-items: flex-start; /* New property to align items to the start of the container */
 }
-
 
 .info {
     color: green;
@@ -48,7 +46,6 @@ textarea {
     color: green;
 }
 
-/* Existing CSS */
 .callForm input[type="text"], 
 .callForm input[type="email"],
 .callForm textarea {
@@ -56,12 +53,14 @@ textarea {
     margin-bottom: 5px; /* Add some space between fields */
 }
 
-/* Updated CSS */
+.callForm {
+    display: flex;
+    flex-direction: column; /* Aligns items vertically */
+}
+
 .callForm > div, /* Selects all divs that are direct children of .callForm */
 .callForm > button /* Selects all buttons that are direct children of .callForm */ {
-    display: flex;
-    flex-direction: row; /* Change from column to row */
-    align-items: center;
+    align-items: flex-start; /* Aligns items to the start (left side) of the container */
     margin-bottom: 5px;
     padding-left: 5px; /* Add 5px space to the left of each div and button in .callForm */
 }
@@ -76,12 +75,11 @@ textarea {
     flex-direction: column;
     align-items: flex-start;
 }
+
 .output {
     padding: 5px; /* Adds some space inside the output div */
     background-color: #f0f0f0; /* Sets a light grey background color */
 }
-
-
 
 .output-data {
     /* Add any specific styles for the results text here */
