--- a/style.css
+++ b/style.css
@@ -14,14 +14,19 @@
     color: red;
 }
 
-.dismiss-btn {
+.dismiss-btn,
+.submit-btn {
     background-color: red;
     color: white;
+    width: auto; /* Takes only as much space as needed */
+    padding: 5px 10px; /* Add some padding around the text */
 }
 
 .submit-btn {
     background-color: green;
     color: white;
+    width: auto; /* Takes only as much space as needed */
+    padding: 5px 10px; /* Add some padding around the text */
 }
 
 textarea {
@@ -89,4 +94,11 @@ textarea {
 .button-container {
     display: flex;
     justify-content: flex-start;
+}
+
+.update-btn,
+.toggle-btn,
+.delete-btn {
+    width: auto; /* Takes only as much space as needed */
+    padding: 5px 10px; /* Add some padding around the text */
 }
