--- a/style.css
+++ b/style.css
@@ -17,9 +17,10 @@
 .dismiss-btn {
     background-color: red;
     color: white;
-    width: auto; /* Takes only as much space as needed */
+    width: fit-content; /* This should force the button to be only as wide as its content */
     padding: 5px 10px; /* Add some padding around the text */
 }
+
 
 .submit-btn {
     background-color: green;
