--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
 .submit-btn {
     background-color: green;
     color: white;
-    width: auto; /* Takes only as much space as needed */
+    width: fit-content; /* This should force the button to be only as wide as its content */
     padding: 5px 10px; /* Add some padding around the text */
 }
 
